@@ -1,3 +1,9 @@
+* What's new since version 0.5.12?
+
+- When running in -p4 (compile-only) mode, the compiled .ko file name
+  is printed on standard output.
+
+
 * What's new since version 0.5.10?
 
 - Offline processing of debugging information, enabling general
