@@ -1,3 +1,7 @@
+2007-01-29  Frank Ch. Eigler  <fche@elastic.org>
+
+	* systemtap.base/cache.exp (stap_compile): Accept new -p4 output.
+
 2007-01-24  Will Cohen  <wcohen@redhat.com>
 
 	* systemtap.syscall/syscall.exp: Increase timeout for slow machines.
